cockroachlabs-preview-main/docs/v23.2/physical-cluster-replication-overview.mdx
---
title: "Physical Cluster Replication"
old_description: "An overview of CockroachDB's physical cluster replication."
---

import { InlineImage } from "/snippets/InlineImage.jsx";

<Note>
**This feature is in [preview](/docs/v23.2/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).

Refer to the [Known Limitations](#known-limitations) section for further detail.
</Note>

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v23.2: CockroachDB **physical cluster replication (PCR)** continuously sends all data at the cluster level from a *primary* cluster to an independent *standby* cluster. Existing data and ongoing changes on the active primary cluster, which is serving application data, replicate asynchronously to the passive standby cluster.

You can [*cut over*](/docs/v23.2/cutover-replication) from the primary cluster to the standby cluster. This will stop the replication stream, reset the standby cluster to a point in time (in the past or future) where all ingested data is consistent, and make the standby ready to accept application traffic.

For a list of requirements for PCR, refer to the [Before you begin](/docs/v23.2/set-up-physical-cluster-replication#before-you-begin) section of the [setup tutorial](/docs/v23.2/set-up-physical-cluster-replication).

## Use cases

You can use PCR to:

- Meet your RTO (Recovery Time Objective) and RPO (Recovery Point Objective) requirements. Physical cluster replication provides lower RTO and RPO than [backup and restore](/docs/v23.2/backup-and-restore-overview).
- Automatically replicate everything in your primary cluster to recover quickly from a control plane or full cluster failure.
- Protect against region failure when you cannot use individual [multi-region clusters](/docs/v23.2/multiregion-overview) —for example, if you have a two-datacenter architecture and do not have access to three regions; or, you need low-write latency in a single region. Physical cluster replication allows for an active-passive (primary-standby) structure across two clusters with the passive cluster in different region.
- Quickly recover from user error (for example, dropping a database) by [failing over](/docs/v23.2/cutover-replication) to a time in the near past.
- Create a [blue-green deployment model](https://en.wikipedia.org/wiki/Blue%E2%80%93green_deployment) by using the standby cluster for testing upgrades and hardware changes.

## Features

- **Asynchronous byte-level replication**: When you initiate a replication stream, it will replicate byte-for-byte all of the primary cluster's existing user data and associated metadata to the standby cluster asynchronously. From then on, it will continuously replicate the primary cluster's data and metadata to the standby cluster. Physical cluster replication will automatically replicate changes related to operations such as [schema changes](/docs/v23.2/online-schema-changes), user and [privilege](/docs/v23.2/security-reference/authorization#managing-privileges) modifications, and [zone configuration](/docs/v23.2/show-zone-configurations) updates without any manual work.
- **Transactional consistency**: Avoid conflicts in data after recovery; the replication completes to a transactionally consistent state as of a certain point in time.
- **Improved RPO and RTO**: Depending on workload and deployment configuration, [replication lag](/docs/v23.2/physical-cluster-replication-technical-overview) between the primary and standby is generally in the tens-of-seconds range. The cutover process from the primary cluster to the standby should typically happen within five minutes when completing a cutover to the latest replicated time using [`LATEST`](/docs/v23.2/alter-virtual-cluster#synopsis).
- **Cutover to a timestamp in the past or the future**: In the case of logical disasters or mistakes, you can [cut over](/docs/v23.2/cutover-replication) from the primary to the standby cluster to a timestamp in the past. This means that you can return the standby to a timestamp before the mistake was replicated to the standby. Furthermore, you can plan a cutover by specifying a timestamp in the future.
- **Monitoring**: To monitor the replication's initial progress, current status, and performance, you can use metrics available in the [DB Console](/docs/v23.2/ui-overview) and [Prometheus](/docs/v23.2/monitor-cockroachdb-with-prometheus). For more detail, refer to [Physical Cluster Replication Monitoring](/docs/v23.2/physical-cluster-replication-monitoring).

## Known limitations

- Physical cluster replication is supported only on CockroachDB self-hosted in new v23.2 clusters and later. Physical Cluster Replication cannot be enabled on clusters that have been upgraded from a version of CockroachDB earlier than v23.2.
- Read queries are not supported on the standby cluster before [cutover](/docs/v23.2/cutover-replication).
- The primary and standby clusters must have the same [zone configurations](/docs/v23.2/configure-replication-zones).
- Before cutover to the standby, the standby cluster does not support running [backups](/docs/v23.2/backup-and-restore-overview) or [changefeeds](/docs/v23.2/change-data-capture-overview).
- After a cutover, there is no mechanism to stop applications from connecting to the original primary cluster. It is necessary to redirect application traffic manually, such as by using a network load balancer or adjusting DNS records.
- After the [cutover process](/docs/v23.2/cutover-replication) for [physical cluster replication](/docs/v23.2/physical-cluster-replication-overview), [scheduled changefeeds](/docs/v23.2/create-schedule-for-changefeed) will continue on the promoted cluster. You will need to manage [pausing](/docs/v23.2/pause-schedules) or [canceling](/docs/v23.2/drop-schedules) the schedule on the promoted standby cluster to avoid two clusters running the same changefeed to one sink. [Tracking GitHub issue](https://github.com/cockroachdb/cockroach/issues/123776)

## Get started

This section is a quick overview of the initial requirements to start a replication stream.

For more comprehensive guides, refer to:

- [Set Up Physical Cluster Replication](/docs/v23.2/set-up-physical-cluster-replication): for a tutorial on how to start a replication stream.
- [Physical Cluster Replication Monitoring](/docs/v23.2/physical-cluster-replication-monitoring): for detail on metrics and observability into a replication stream.
- [Cut Over from a Primary Cluster to a Standby Cluster](/docs/v23.2/cutover-replication): for a guide on how to complete a replication stream and cut over to the standby cluster.
- [Technical Overview](/docs/v23.2/physical-cluster-replication-technical-overview): to understand physical cluster replication in more depth before setup.

### Manage replication in the SQL shell

To start, manage, and observe physical cluster replication, you can use the following SQL statements:

<table><thead><tr><th>Statement</th><th>Action</th></tr></thead><tbody><tr><td><a href="/docs/v23.2/create-virtual-cluster"><code>CREATE VIRTUAL CLUSTER ... FROM REPLICATION OF ...</code></a></td><td>Start a replication stream.</td></tr><tr><td><a href="/docs/v23.2/alter-virtual-cluster"><code>ALTER VIRTUAL CLUSTER ... PAUSE REPLICATION</code></a></td><td>Pause a running replication stream.</td></tr><tr><td><a href="/docs/v23.2/alter-virtual-cluster"><code>ALTER VIRTUAL CLUSTER ... RESUME REPLICATION</code></a></td><td>Resume a paused replication stream.</td></tr><tr><td><a href="/docs/v23.2/alter-virtual-cluster"><code>ALTER VIRTUAL CLUSTER ... START SERVICE SHARED</code></a></td><td>Initiate a <a href="/docs/v23.2/cutover-replication">cutover</a>.</td></tr><tr><td><a href="/docs/v23.2/show-virtual-cluster"><code>SHOW VIRTUAL CLUSTER</code></a></td><td>Show all virtual clusters.</td></tr><tr><td><a href="/docs/v23.2/drop-virtual-cluster"><code>DROP VIRTUAL CLUSTER</code></a></td><td>Remove a virtual cluster.</td></tr></tbody></table>

## Cluster versions and upgrades

<Warning>
The standby cluster must be at the same version as, or one version ahead of, the primary's virtual cluster.
</Warning>

When PCR is enabled, upgrade with the following procedure. This upgrades the standby cluster before the primary cluster. Within the primary and standby CockroachDB clusters, the system virtual cluster must be at a cluster version greater than or equal to the virtual cluster:

1. [Upgrade the binaries](/docs/v23.2/upgrade-cockroach-version#step-4-perform-the-rolling-upgrade) on the primary and standby clusters. Replace the binary on each node of the cluster and restart the node.
2. [Finalize](/docs/v23.2/upgrade-cockroach-version#step-6-finish-the-upgrade) the upgrade on the standby's system virtual cluster.
3. [Finalize](/docs/v23.2/upgrade-cockroach-version#step-6-finish-the-upgrade) the upgrade on the primary's system virtual cluster.
4. [Finalize](/docs/v23.2/upgrade-cockroach-version#step-6-finish-the-upgrade) the upgrade on the standby's virtual cluster.
5. [Finalize](/docs/v23.2/upgrade-cockroach-version#step-6-finish-the-upgrade) the upgrade on the primary's virtual cluster.

The standby cluster must be at the same version as, or one version ahead of, the primary's virtual cluster at the time of [cutover](/docs/v23.2/cutover-replication).

## Demo video

Learn how to harness Physical Cluster Replication to meet your RTO and RPO requirements with the following demo:

<Frame>
  <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0" height="315" src="https://www.youtube.com/embed/VDqw4XIpEAk" title="YouTube video player" width="560"></iframe>
</Frame>
